Changed alignment of type popup and fixed dissapearing type effecctiveness identifier

--- a/src/Fight/Fight.css
+++ b/src/Fight/Fight.css
@@ -75,6 +75,8 @@
 }
 
 .circle {
+  background-color: green;
+  color: rgba(255, 255, 255, 0);
   border-radius: 50%;
   max-width: 8px;
   height: 8px;
